# hackathon2_todo_app_phasew

./: .gitignore  main.py  pyproject.toml  requirements.txt
.claude/agents/: python-cli-implementer.md  review-agent.md  spec-manager.md  todo-domain-expert.md
.claude/skills/: qa.quality-audit.md  qa.requirements-compliance.md  qa.test-execution-plan.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
history/prompts/001-todo-cli-core/: 002-create-todo-cli-core-spec.spec.prompt.md  003-create-todo-cli-core-plan.plan.prompt.md  004-create-todo-cli-core-tasks.tasks.prompt.md  005-implement-todo-cli-core.implement.prompt.md
history/prompts/constitution/: 001-create-global-constitution.constitution.prompt.md
history/prompts/general/: 001-fix-enhance-todo-cli.misc.prompt.md
specs/001-todo-cli-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-cli-core/checklists/: requirements.md
specs/001-todo-cli-core/contracts/: cli-interface.md
src/: __init__.py
src/cli/: __init__.py
src/models/: __init__.py  task.py
src/services/: __init__.py  task_store.py
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_task.py  test_task_store.py
